--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-	<a href="src/vis//viz1.html">d3 1</a>
-	<a href="src/vis//viz2.html">d3 2</a>
-	<a href="src/vis//viz3.html">d3 3</a>
-	<a href="">Tableau 1</a>
+	<a href="https://mparakh-1662688.github.io/project-info474/">d3 1</a>
+	<a href="src/viz//viz2.html">d3 2</a>
+	<a href="src/viz//viz3.html">d3 3</a>
+	<a href="https://public.tableau.com/profile/vineeth.sai.narajala#!/vizhome/INFO474/Dashboard1?publish=yes">Tableau 1</a>
 	<a href="">Tableau 2</a>
 
 </body>
