add last tableau and trying to map HDI.json and countries.geojson

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-	<a href="https://mparakh-1662688.github.io/project-info474/">d3 1</a>
-	<a href="https://hansol9718.github.io/final-474/">d3 2</a>
-	<a href="src/viz//viz3.html">d3 3</a>
-	<a href="https://public.tableau.com/profile/vineeth.sai.narajala#!/vizhome/INFO474/Dashboard1?publish=yes">Tableau 1</a>
-	<a href="">Tableau 2</a>
+	<ul>
+		<li><a href="https://mparakh-1662688.github.io/project-info474/">D3 #1</a></li>
+		<li><a href="https://hansol9718.github.io/final-474/">D3 #2</a></li>
+		<li><a href="src/viz//viz3.html">D3 #3</a></li>
+		<li><a href="https://public.tableau.com/profile/vineeth.sai.narajala#!/vizhome/INFO474/Dashboard1?publish=yes">Tableau #1</a></li>
+		<li><a href="https://public.tableau.com/profile/anushka.raheja#!/vizhome/vis1_15755243856440/Sheet1?publish=yes">Tableau #2</a></li>
+	</ul>
 
 </body>
 <script src="./index.js"></script>
