--- a/index.html
+++ b/index.html
@@ -7,14 +7,36 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>INFO 474 Final Project - Autumn 2019</title>
 </head>
-
+<h1>
+	Welcome to group 6's presentation!
+</h1>
 <body>
 	<ul>
-		<li><a href="https://mparakh-1662688.github.io/project-info474/">D3 #1</a></li>
-		<li><a href="https://hansol9718.github.io/final-474/">D3 #2</a></li>
-		<li><a href="src/viz//viz3.html">D3 #3</a></li>
+		<li>
+				<h2>Viz 1</h2> <br>
+			<a href="https://mparakh-1662688.github.io/project-info474/">D3 #1</a></li>
+		<br>
+		
+		<li>
+				<h2>Viz 2</h2> <br>
+			<a href="https://hansol9718.github.io/final-474/">D3 #2</a></li>
+		<br>
+		
+		<li>
+				<h2>Viz 3</h2> <br>
+			<a href="src/viz//viz3.html">D3 #3</a></li>
+		<br>
+		<li>
+			<h2>Viz 4</h2> <br>
+				This viz shows the relationship between the percentage of internet users and the estimated gross national income per capita for females in specific countries. The color shows the share of seats held by women in parliament.
 		<div class='tableauPlaceholder' id='viz1575530892565' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;IN&#47;INFO474&#47;tool&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='INFO474&#47;tool' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;IN&#47;INFO474&#47;tool&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1575530892565');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-		<li><a href="https://public.tableau.com/profile/anushka.raheja#!/vizhome/vis1_15755243856440/Sheet1?publish=yes">Tableau #2</a></li>
+		</li>
+		<br>
+		<li>
+				<h2>Viz 5</h2> <br>
+				This visualization shows the relationship between mean years of school and gross national income per capita for specific countries.
+			<div class='tableauPlaceholder' id='viz1575563071522' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;vis1_15755243856440&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='vis1_15755243856440&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;vi&#47;vis1_15755243856440&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1575563071522');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+		</li>
 	</ul>
 
 </body>
