--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 <h1>
 	Welcome to group 6's presentation!
 </h1>
+<h2>
+	Dataset:
+</h2>
+<h3>
+		https://catalog.data.gov/dataset?res_format=GeoJSON
+<br>
+		https://www.kaggle.com/sudhirnl7/human-development-index-hdi#Continent_HDI.csv - human development report
+<br>
+<p>
+		We decided to choose this dataset because it gives a lot of information about years of schooling, human development, gross national income per capita, population data, etc. which we think are critical factors in understanding a country’s development. The dataset also provides this information for two genders: male and female. We feel that this information is essential to compare potential gender inequalities. We also think that it might be important to see the relations between life expectancy and the country’s total population.  This visualization could further help us find and understand the optimal population to maintain, resulting in the highest life expectancy value. 
+
+</p>
+
+		
+</h3>
 <body>
 	<ul>
 		<li>
