--- a/src/viz/viz3.html
+++ b/src/viz/viz3.html
@@ -39,6 +39,12 @@
   <body>
         <h1 class="center">Distribution of HDI level across the country</h1>
 
+        <div class="details">
+            <h2 class="country"></h2>
+            <p class="females"></p>
+            <p class="males"></p>
+        </div>
+
         <script src='https://d3js.org/d3.v4.min.js'></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.js"></script>
         <script src="./viz3.js"></script>
